[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["jabagram"]

[project]
name = "jabagram"
version="1.0.0"
description = "Fully functional bridge between Telegram and XMPP"
authors = [ {name = "Vasiliy Stelmachenok", email = "ventureo@yandex.ru"} ]
maintainers = [ {name = "Vasiliy Stelmachenok", email = "ventureo@yandex.ru"} ]
keywords = ["xmpp", "telegram", "asyncio", "bridge"]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "aiohttp",
    "fastapi[all]>=0.115.12",
    "httpx[socks]==0.27.2",
    "privatebinapi>=1.0.0",
    "pydantic>=2.11.5",
    "retrying>=1.3.4",
    "slixmpp",
    "unidecode",
    "uvicorn>=0.34.2",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.scripts]
jabagram = "jabagram.runner:main"

[project.urls]
Homepage = "https://github.com/ventureoo/jabagram"
Repository = "https://github.com/ventureoo/jabagram.git"
"Bug Tracker" = "https://github.com/ventureoo/jabagram/issues"

[tool.hatch.version]
path = "jabagram/__init__.py"

